filenames = {
  js_sources = [
    "lib/browser/api/app.ts",
    "lib/browser/api/auto-updater.js",
    "lib/browser/api/auto-updater/auto-updater-native.js",
    "lib/browser/api/auto-updater/auto-updater-win.js",
    "lib/browser/api/auto-updater/squirrel-update-win.js",
    "lib/browser/api/browser-view.js",
    "lib/browser/api/browser-window.js",
    "lib/browser/api/content-tracing.js",
    "lib/browser/api/crash-reporter.js",
    "lib/browser/api/dialog.js",
    "lib/browser/api/exports/electron.js",
    "lib/browser/api/global-shortcut.js",
    "lib/browser/api/ipc-main.ts",
    "lib/browser/api/in-app-purchase.js",
    "lib/browser/api/menu-item-roles.js",
    "lib/browser/api/menu-item.js",
    "lib/browser/api/menu-utils.js",
    "lib/browser/api/menu.js",
    "lib/browser/api/module-list.js",
    "lib/browser/api/net.js",
    "lib/browser/api/net-log.js",
    "lib/browser/api/notification.js",
    "lib/browser/api/power-monitor.js",
    "lib/browser/api/power-save-blocker.js",
    "lib/browser/api/protocol.ts",
    "lib/browser/api/screen.js",
    "lib/browser/api/session.js",
    "lib/browser/api/system-preferences.js",
    "lib/browser/api/top-level-window.js",
    "lib/browser/api/touch-bar.js",
    "lib/browser/api/tray.js",
    "lib/browser/api/view.js",
    "lib/browser/api/web-contents.js",
    "lib/browser/api/web-contents-view.js",
    "lib/browser/chrome-devtools.js",
    "lib/browser/chrome-extension.js",
    "lib/browser/crash-reporter-init.js",
    "lib/browser/default-menu.ts",
    "lib/browser/guest-view-manager.js",
    "lib/browser/guest-window-manager.js",
    "lib/browser/init.ts",
    "lib/browser/ipc-main-internal-utils.ts",
    "lib/browser/ipc-main-internal.ts",
    "lib/browser/navigation-controller.js",
    "lib/browser/objects-registry.js",
    "lib/browser/rpc-server.js",
    "lib/common/api/clipboard.js",
    "lib/common/api/deprecate.ts",
    "lib/common/api/deprecations.js",
    "lib/common/api/is-promise.js",
    "lib/common/api/exports/electron.js",
    "lib/common/api/module-list.js",
    "lib/common/api/native-image.js",
    "lib/common/api/shell.js",
    "lib/common/atom-binding-setup.ts",
    "lib/common/buffer-utils.js",
    "lib/common/crash-reporter.js",
    "lib/common/error-utils.js",
    "lib/common/init.ts",
    "lib/common/parse-features-string.js",
    "lib/common/reset-search-paths.ts",
    "lib/common/web-view-methods.js",
    "lib/renderer/callbacks-registry.js",
    "lib/renderer/chrome-api.js",
    "lib/renderer/content-scripts-injector.js",
    "lib/renderer/init.js",
    "lib/renderer/inspector.js",
    "lib/renderer/ipc-renderer-internal-utils.ts",
    "lib/renderer/ipc-renderer-internal.ts",
    "lib/renderer/remote.ts",
    "lib/renderer/security-warnings.js",
    "lib/renderer/web-frame-init.js",
    "lib/renderer/window-setup.ts",
    "lib/renderer/web-view/guest-view-internal.js",
    "lib/renderer/web-view/web-view-attributes.js",
    "lib/renderer/web-view/web-view-constants.js",
    "lib/renderer/web-view/web-view-element.js",
    "lib/renderer/web-view/web-view-impl.js",
    "lib/renderer/web-view/web-view-init.js",
    "lib/renderer/api/exports/electron.js",
    "lib/renderer/api/crash-reporter.js",
    "lib/renderer/api/ipc-renderer.js",
    "lib/renderer/api/module-list.js",
    "lib/renderer/api/remote.js",
    "lib/renderer/api/web-frame.js",
    "lib/renderer/extensions/event.js",
    "lib/renderer/extensions/i18n.js",
    "lib/renderer/extensions/storage.js",
    "lib/renderer/extensions/web-navigation.js",
    "lib/worker/init.js",
  ]

  default_app_ts_sources = [
    "default_app/default_app.ts",
    "default_app/main.ts",
    "default_app/renderer.ts",
  ]

  default_app_static_sources = [
    "default_app/icon.png",
    "default_app/index.html",
    "default_app/package.json",
    "default_app/styles.css",
  ]

  default_app_octicon_sources = [
    "node_modules/octicons/build/build.css",
    "node_modules/octicons/build/svg/gist.svg",
    "node_modules/octicons/build/svg/mark-github.svg",
    "node_modules/octicons/build/svg/gear.svg",
    "node_modules/octicons/build/svg/star.svg",
    "node_modules/octicons/build/svg/gift.svg",
  ]

  lib_sources = [
    "atom/app/atom_content_client.cc",
    "atom/app/atom_content_client.h",
    "atom/app/atom_main_delegate.cc",
    "atom/app/atom_main_delegate.h",
    "atom/app/atom_main_delegate_mac.h",
    "atom/app/atom_main_delegate_mac.mm",
    "atom/app/command_line_args.cc",
    "atom/app/command_line_args.h",
    "atom/app/uv_task_runner.cc",
    "atom/app/uv_task_runner.h",
    "atom/browser/api/atom_api_app.cc",
    "atom/browser/font_defaults.cc",
    "atom/browser/font_defaults.h",
    "atom/browser/api/atom_api_app.h",
    "atom/browser/api/atom_api_auto_updater.cc",
    "atom/browser/api/atom_api_auto_updater.h",
    "atom/browser/api/atom_api_browser_view.cc",
    "atom/browser/api/atom_api_browser_view.h",
    "atom/browser/api/atom_api_content_tracing.cc",
    "atom/browser/api/atom_api_cookies.cc",
    "atom/browser/api/atom_api_cookies.h",
    "atom/browser/api/atom_api_debugger.cc",
    "atom/browser/api/atom_api_debugger.h",
    "atom/browser/api/atom_api_dialog.cc",
    "atom/browser/api/atom_api_download_item.cc",
    "atom/browser/api/atom_api_download_item.h",
    "atom/browser/api/atom_api_event.cc",
    "atom/browser/api/atom_api_global_shortcut.cc",
    "atom/browser/api/atom_api_global_shortcut.h",
    "atom/browser/api/atom_api_in_app_purchase.cc",
    "atom/browser/api/atom_api_in_app_purchase.h",
    "atom/browser/api/atom_api_menu.cc",
    "atom/browser/api/atom_api_menu.h",
    "atom/browser/api/atom_api_menu_mac.h",
    "atom/browser/api/atom_api_menu_mac.mm",
    "atom/browser/api/atom_api_menu_views.cc",
    "atom/browser/api/atom_api_menu_views.h",
    "atom/browser/api/atom_api_net.cc",
    "atom/browser/api/atom_api_net.h",
    "atom/browser/api/atom_api_net_log.cc",
    "atom/browser/api/atom_api_net_log.h",
    "atom/browser/api/atom_api_notification.cc",
    "atom/browser/api/atom_api_notification.h",
    "atom/browser/api/atom_api_power_monitor_mac.mm",
    "atom/browser/api/atom_api_power_monitor_win.cc",
    "atom/browser/api/atom_api_power_monitor.cc",
    "atom/browser/api/atom_api_power_monitor.h",
    "atom/browser/api/atom_api_power_save_blocker.cc",
    "atom/browser/api/atom_api_power_save_blocker.h",
    "atom/browser/api/atom_api_protocol.cc",
    "atom/browser/api/atom_api_protocol.h",
    "atom/browser/api/atom_api_render_process_preferences.cc",
    "atom/browser/api/atom_api_render_process_preferences.h",
    "atom/browser/api/atom_api_screen.cc",
    "atom/browser/api/atom_api_screen.h",
    "atom/browser/api/atom_api_session.cc",
    "atom/browser/api/atom_api_session.h",
    "atom/browser/api/atom_api_system_preferences.cc",
    "atom/browser/api/atom_api_system_preferences.h",
    "atom/browser/api/atom_api_system_preferences_mac.mm",
    "atom/browser/api/atom_api_system_preferences_win.cc",
    "atom/browser/api/atom_api_top_level_window.cc",
    "atom/browser/api/atom_api_top_level_window.h",
    "atom/browser/api/atom_api_tray.cc",
    "atom/browser/api/atom_api_tray.h",
    "atom/browser/api/atom_api_url_request.cc",
    "atom/browser/api/atom_api_url_request.h",
    "atom/browser/api/atom_api_view.cc",
    "atom/browser/api/atom_api_view.h",
    "atom/browser/api/atom_api_web_contents.cc",
    "atom/browser/api/atom_api_web_contents.h",
    "atom/browser/api/atom_api_web_contents_impl.cc",
    "atom/browser/api/atom_api_web_contents_mac.mm",
    "atom/browser/api/atom_api_web_contents_view.cc",
    "atom/browser/api/atom_api_web_contents_view.h",
    "atom/browser/api/atom_api_web_request.cc",
    "atom/browser/api/atom_api_web_request.h",
    "atom/browser/api/atom_api_web_view_manager.cc",
    "atom/browser/api/atom_api_browser_window.cc",
    "atom/browser/api/atom_api_browser_window.h",
    "atom/browser/api/atom_api_browser_window_mac.mm",
    "atom/browser/api/atom_api_browser_window_views.cc",
    "atom/browser/api/event.cc",
    "atom/browser/api/event.h",
    "atom/browser/api/event_emitter.cc",
    "atom/browser/api/event_emitter.h",
    "atom/browser/api/stream_subscriber.cc",
    "atom/browser/api/stream_subscriber.h",
    "atom/browser/api/trackable_object.cc",
    "atom/browser/api/trackable_object.h",
    "atom/browser/api/frame_subscriber.cc",
    "atom/browser/api/frame_subscriber.h",
    "atom/browser/api/gpu_info_enumerator.cc",
    "atom/browser/api/gpu_info_enumerator.h",
    "atom/browser/api/gpuinfo_manager.cc",
    "atom/browser/api/gpuinfo_manager.h",
    "atom/browser/api/save_page_handler.cc",
    "atom/browser/api/save_page_handler.h",
    "atom/browser/auto_updater.cc",
    "atom/browser/auto_updater.h",
    "atom/browser/auto_updater_mac.mm",
    "atom/browser/atom_blob_reader.cc",
    "atom/browser/atom_blob_reader.h",
    "atom/browser/atom_browser_client.cc",
    "atom/browser/atom_browser_client.h",
    "atom/browser/atom_browser_context.cc",
    "atom/browser/atom_browser_context.h",
    "atom/browser/atom_download_manager_delegate.cc",
    "atom/browser/atom_download_manager_delegate.h",
    "atom/browser/atom_browser_main_parts.cc",
    "atom/browser/atom_browser_main_parts.h",
    "atom/browser/atom_browser_main_parts_mac.mm",
    "atom/browser/atom_browser_main_parts_posix.cc",
    "atom/browser/atom_javascript_dialog_manager.cc",
    "atom/browser/atom_javascript_dialog_manager.h",
    "atom/browser/atom_navigation_throttle.h",
    "atom/browser/atom_navigation_throttle.cc",
    "atom/browser/atom_paths.h",
    "atom/browser/atom_permission_manager.cc",
    "atom/browser/atom_permission_manager.h",
    "atom/browser/atom_quota_permission_context.cc",
    "atom/browser/atom_quota_permission_context.h",
    "atom/browser/atom_resource_dispatcher_host_delegate.cc",
    "atom/browser/atom_resource_dispatcher_host_delegate.h",
    "atom/browser/atom_speech_recognition_manager_delegate.cc",
    "atom/browser/atom_speech_recognition_manager_delegate.h",
    "atom/browser/atom_web_ui_controller_factory.cc",
    "atom/browser/atom_web_ui_controller_factory.h",
    "atom/browser/browser.cc",
    "atom/browser/browser.h",
    "atom/browser/browser_linux.cc",
    "atom/browser/browser_mac.mm",
    "atom/browser/browser_win.cc",
    "atom/browser/browser_observer.h",
    "atom/browser/browser_process_impl.cc",
    "atom/browser/browser_process_impl.h",
    "atom/browser/child_web_contents_tracker.cc",
    "atom/browser/child_web_contents_tracker.h",
    "atom/browser/common_web_contents_delegate_mac.mm",
    "atom/browser/common_web_contents_delegate_views.cc",
    "atom/browser/common_web_contents_delegate.cc",
    "atom/browser/common_web_contents_delegate.h",
    "atom/browser/cookie_change_notifier.cc",
    "atom/browser/cookie_change_notifier.h",
    "atom/browser/io_thread.cc",
    "atom/browser/io_thread.h",
    "atom/browser/javascript_environment.cc",
    "atom/browser/javascript_environment.h",
    "atom/browser/lib/bluetooth_chooser.cc",
    "atom/browser/lib/bluetooth_chooser.h",
    "atom/browser/lib/power_observer.h",
    "atom/browser/lib/power_observer_linux.h",
    "atom/browser/lib/power_observer_linux.cc",
    "atom/browser/loader/layered_resource_handler.cc",
    "atom/browser/loader/layered_resource_handler.h",
    "atom/browser/login_handler.cc",
    "atom/browser/login_handler.h",
    "atom/browser/mac/atom_application.h",
    "atom/browser/mac/atom_application.mm",
    "atom/browser/mac/atom_application_delegate.h",
    "atom/browser/mac/atom_application_delegate.mm",
    "atom/browser/mac/dict_util.h",
    "atom/browser/mac/dict_util.mm",
    "atom/browser/mac/in_app_purchase.h",
    "atom/browser/mac/in_app_purchase.mm",
    "atom/browser/mac/in_app_purchase_observer.h",
    "atom/browser/mac/in_app_purchase_observer.mm",
    "atom/browser/mac/in_app_purchase_product.h",
    "atom/browser/mac/in_app_purchase_product.mm",
    "atom/browser/microtasks_runner.cc",
    "atom/browser/microtasks_runner.h",
    "atom/browser/native_browser_view.cc",
    "atom/browser/native_browser_view.h",
    "atom/browser/native_browser_view_mac.h",
    "atom/browser/native_browser_view_mac.mm",
    "atom/browser/native_browser_view_views.h",
    "atom/browser/native_browser_view_views.cc",
    "atom/browser/native_window.cc",
    "atom/browser/native_window.h",
    "atom/browser/native_window_views_win.cc",
    "atom/browser/native_window_views.cc",
    "atom/browser/native_window_views.h",
    "atom/browser/native_window_mac.h",
    "atom/browser/native_window_mac.mm",
    "atom/browser/native_window_observer.h",
    "atom/browser/media/media_capture_devices_dispatcher.cc",
    "atom/browser/media/media_capture_devices_dispatcher.h",
    "atom/browser/media/media_device_id_salt.cc",
    "atom/browser/media/media_device_id_salt.h",
    "atom/browser/media/media_stream_devices_controller.cc",
    "atom/browser/media/media_stream_devices_controller.h",
    "atom/browser/net/about_protocol_handler.cc",
    "atom/browser/net/about_protocol_handler.h",
    "atom/browser/net/asar/asar_protocol_handler.cc",
    "atom/browser/net/asar/asar_protocol_handler.h",
    "atom/browser/net/asar/url_request_asar_job.cc",
    "atom/browser/net/asar/url_request_asar_job.h",
    "atom/browser/net/atom_cert_verifier.cc",
    "atom/browser/net/atom_cert_verifier.h",
    "atom/browser/net/atom_network_delegate.cc",
    "atom/browser/net/atom_network_delegate.h",
    "atom/browser/net/atom_url_request.cc",
    "atom/browser/net/atom_url_request.h",
    "atom/browser/net/atom_url_request_job_factory.cc",
    "atom/browser/net/atom_url_request_job_factory.h",
    "atom/browser/net/http_protocol_handler.cc",
    "atom/browser/net/http_protocol_handler.h",
    "atom/browser/net/js_asker.cc",
    "atom/browser/net/js_asker.h",
    "atom/browser/net/require_ct_delegate.cc",
    "atom/browser/net/require_ct_delegate.h",
    "atom/browser/net/resolve_proxy_helper.cc",
    "atom/browser/net/resolve_proxy_helper.h",
    "atom/browser/net/system_network_context_manager.cc",
    "atom/browser/net/system_network_context_manager.h",
    "atom/browser/net/url_request_about_job.cc",
    "atom/browser/net/url_request_about_job.h",
    "atom/browser/net/url_request_async_asar_job.cc",
    "atom/browser/net/url_request_async_asar_job.h",
    "atom/browser/net/url_request_string_job.cc",
    "atom/browser/net/url_request_string_job.h",
    "atom/browser/net/url_request_buffer_job.cc",
    "atom/browser/net/url_request_buffer_job.h",
    "atom/browser/net/url_request_context_getter.cc",
    "atom/browser/net/url_request_context_getter.h",
    "atom/browser/net/url_request_fetch_job.cc",
    "atom/browser/net/url_request_fetch_job.h",
    "atom/browser/net/url_request_stream_job.cc",
    "atom/browser/net/url_request_stream_job.h",
    "atom/browser/notifications/linux/libnotify_notification.cc",
    "atom/browser/notifications/linux/libnotify_notification.h",
    "atom/browser/notifications/linux/notification_presenter_linux.cc",
    "atom/browser/notifications/linux/notification_presenter_linux.h",
    "atom/browser/notifications/mac/cocoa_notification.h",
    "atom/browser/notifications/mac/cocoa_notification.mm",
    "atom/browser/notifications/mac/notification_center_delegate.h",
    "atom/browser/notifications/mac/notification_center_delegate.mm",
    "atom/browser/notifications/mac/notification_presenter_mac.h",
    "atom/browser/notifications/mac/notification_presenter_mac.mm",
    "atom/browser/notifications/notification.cc",
    "atom/browser/notifications/notification.h",
    "atom/browser/notifications/notification_delegate.h",
    "atom/browser/notifications/notification_presenter.cc",
    "atom/browser/notifications/notification_presenter.h",
    "atom/browser/notifications/platform_notification_service.cc",
    "atom/browser/notifications/platform_notification_service.h",
    "atom/browser/notifications/win/notification_presenter_win.cc",
    "atom/browser/notifications/win/notification_presenter_win.h",
    "atom/browser/notifications/win/notification_presenter_win7.cc",
    "atom/browser/notifications/win/notification_presenter_win7.h",
    "atom/browser/notifications/win/win32_desktop_notifications/common.h",
    "atom/browser/notifications/win/win32_desktop_notifications/desktop_notification_controller.cc",
    "atom/browser/notifications/win/win32_desktop_notifications/desktop_notification_controller.h",
    "atom/browser/notifications/win/win32_desktop_notifications/toast.cc",
    "atom/browser/notifications/win/win32_desktop_notifications/toast.h",
    "atom/browser/notifications/win/win32_desktop_notifications/toast_uia.cc",
    "atom/browser/notifications/win/win32_desktop_notifications/toast_uia.h",
    "atom/browser/notifications/win/win32_notification.cc",
    "atom/browser/notifications/win/win32_notification.h",
    "atom/browser/notifications/win/windows_toast_notification.cc",
    "atom/browser/notifications/win/windows_toast_notification.h",
    "atom/browser/node_debugger.cc",
    "atom/browser/node_debugger.h",
    "atom/browser/pref_store_delegate.cc",
    "atom/browser/pref_store_delegate.h",
    "atom/browser/relauncher_linux.cc",
    "atom/browser/relauncher_mac.cc",
    "atom/browser/relauncher_win.cc",
    "atom/browser/relauncher.cc",
    "atom/browser/relauncher.h",
    "atom/browser/render_process_preferences.cc",
    "atom/browser/render_process_preferences.h",
    "atom/browser/session_preferences.cc",
    "atom/browser/session_preferences.h",
    "atom/browser/special_storage_policy.cc",
    "atom/browser/special_storage_policy.h",
    "atom/browser/ui/accelerator_util.cc",
    "atom/browser/ui/accelerator_util.h",
    "atom/browser/ui/atom_menu_model.cc",
    "atom/browser/ui/atom_menu_model.h",
    "atom/browser/ui/autofill_popup.cc",
    "atom/browser/ui/autofill_popup.h",
    "atom/browser/ui/certificate_trust.h",
    "atom/browser/ui/certificate_trust_mac.mm",
    "atom/browser/ui/certificate_trust_win.cc",
    "atom/browser/ui/cocoa/atom_bundle_mover.h",
    "atom/browser/ui/cocoa/atom_bundle_mover.mm",
    "atom/browser/ui/cocoa/atom_menu_controller.h",
    "atom/browser/ui/cocoa/atom_menu_controller.mm",
    "atom/browser/ui/cocoa/atom_native_widget_mac.h",
    "atom/browser/ui/cocoa/atom_native_widget_mac.mm",
    "atom/browser/ui/cocoa/atom_ns_window.h",
    "atom/browser/ui/cocoa/atom_ns_window.mm",
    "atom/browser/ui/cocoa/atom_ns_window_delegate.h",
    "atom/browser/ui/cocoa/atom_ns_window_delegate.mm",
    "atom/browser/ui/cocoa/atom_preview_item.h",
    "atom/browser/ui/cocoa/atom_preview_item.mm",
    "atom/browser/ui/cocoa/atom_touch_bar.h",
    "atom/browser/ui/cocoa/atom_touch_bar.mm",
    "atom/browser/ui/cocoa/delayed_native_view_host.cc",
    "atom/browser/ui/cocoa/delayed_native_view_host.h",
    "atom/browser/ui/cocoa/views_delegate_mac.h",
    "atom/browser/ui/cocoa/views_delegate_mac.mm",
    "atom/browser/ui/cocoa/root_view_mac.mm",
    "atom/browser/ui/cocoa/root_view_mac.h",
    "atom/browser/ui/cocoa/touch_bar_forward_declarations.h",
    "atom/browser/ui/cocoa/atom_inspectable_web_contents_view.h",
    "atom/browser/ui/cocoa/atom_inspectable_web_contents_view.mm",
    "atom/browser/ui/cocoa/event_dispatching_window.h",
    "atom/browser/ui/cocoa/event_dispatching_window.mm",
    "atom/browser/ui/devtools_manager_delegate.cc",
    "atom/browser/ui/devtools_manager_delegate.h",
    "atom/browser/ui/devtools_ui.cc",
    "atom/browser/ui/devtools_ui.h",
    "atom/browser/ui/drag_util_mac.mm",
    "atom/browser/ui/drag_util_views.cc",
    "atom/browser/ui/drag_util.h",
    "atom/browser/ui/file_dialog.h",
    "atom/browser/ui/file_dialog_gtk.cc",
    "atom/browser/ui/file_dialog_mac.mm",
    "atom/browser/ui/file_dialog_win.cc",
    "atom/browser/ui/inspectable_web_contents.cc",
    "atom/browser/ui/inspectable_web_contents.h",
    "atom/browser/ui/inspectable_web_contents_delegate.h",
    "atom/browser/ui/inspectable_web_contents_impl.cc",
    "atom/browser/ui/inspectable_web_contents_impl.h",
    "atom/browser/ui/inspectable_web_contents_view.h",
    "atom/browser/ui/inspectable_web_contents_view_delegate.cc",
    "atom/browser/ui/inspectable_web_contents_view_delegate.h",
    "atom/browser/ui/inspectable_web_contents_view_mac.h",
    "atom/browser/ui/inspectable_web_contents_view_mac.mm",
    "atom/browser/ui/message_box.h",
    "atom/browser/ui/message_box_gtk.cc",
    "atom/browser/ui/message_box_mac.mm",
    "atom/browser/ui/message_box_win.cc",
    "atom/browser/ui/cocoa/NSColor+Hex.mm",
    "atom/browser/ui/cocoa/NSColor+Hex.h",
    "atom/browser/ui/cocoa/NSString+ANSI.mm",
    "atom/browser/ui/cocoa/NSString+ANSI.h",
    "atom/browser/ui/tray_icon.cc",
    "atom/browser/ui/tray_icon.h",
    "atom/browser/ui/tray_icon_gtk.cc",
    "atom/browser/ui/tray_icon_gtk.h",
    "atom/browser/ui/tray_icon_cocoa.h",
    "atom/browser/ui/tray_icon_cocoa.mm",
    "atom/browser/ui/tray_icon_observer.h",
    "atom/browser/ui/tray_icon_win.cc",
    "atom/browser/ui/views/atom_views_delegate.cc",
    "atom/browser/ui/views/atom_views_delegate.h",
    "atom/browser/ui/views/autofill_popup_view.cc",
    "atom/browser/ui/views/autofill_popup_view.h",
    "atom/browser/ui/views/frameless_view.cc",
    "atom/browser/ui/views/frameless_view.h",
    "atom/browser/ui/views/global_menu_bar_x11.cc",
    "atom/browser/ui/views/global_menu_bar_x11.h",
    "atom/browser/ui/views/inspectable_web_contents_view_views.cc",
    "atom/browser/ui/views/inspectable_web_contents_view_views.h",
    "atom/browser/ui/views/menu_bar.cc",
    "atom/browser/ui/views/menu_bar.h",
    "atom/browser/ui/views/menu_delegate.cc",
    "atom/browser/ui/views/menu_delegate.h",
    "atom/browser/ui/views/menu_model_adapter.cc",
    "atom/browser/ui/views/menu_model_adapter.h",
    "atom/browser/ui/views/native_frame_view.cc",
    "atom/browser/ui/views/native_frame_view.h",
    "atom/browser/ui/views/root_view.cc",
    "atom/browser/ui/views/root_view.h",
    "atom/browser/ui/views/submenu_button.cc",
    "atom/browser/ui/views/submenu_button.h",
    "atom/browser/ui/views/win_frame_view.cc",
    "atom/browser/ui/views/win_frame_view.h",
    "atom/browser/ui/win/atom_desktop_native_widget_aura.cc",
    "atom/browser/ui/win/atom_desktop_native_widget_aura.h",
    "atom/browser/ui/win/atom_desktop_window_tree_host_win.cc",
    "atom/browser/ui/win/atom_desktop_window_tree_host_win.h",
    "atom/browser/ui/win/jump_list.cc",
    "atom/browser/ui/win/jump_list.h",
    "atom/browser/ui/win/message_handler_delegate.cc",
    "atom/browser/ui/win/message_handler_delegate.h",
    "atom/browser/ui/win/notify_icon_host.cc",
    "atom/browser/ui/win/notify_icon_host.h",
    "atom/browser/ui/win/notify_icon.cc",
    "atom/browser/ui/win/notify_icon.h",
    "atom/browser/ui/win/taskbar_host.cc",
    "atom/browser/ui/win/taskbar_host.h",
    "atom/browser/ui/x/event_disabler.cc",
    "atom/browser/ui/x/event_disabler.h",
    "atom/browser/ui/x/window_state_watcher.cc",
    "atom/browser/ui/x/window_state_watcher.h",
    "atom/browser/ui/x/x_window_utils.cc",
    "atom/browser/ui/x/x_window_utils.h",
    "atom/browser/unresponsive_suppressor.cc",
    "atom/browser/unresponsive_suppressor.h",
    "atom/browser/win/scoped_hstring.cc",
    "atom/browser/win/scoped_hstring.h",
    "atom/browser/web_contents_permission_helper.cc",
    "atom/browser/web_contents_permission_helper.h",
    "atom/browser/web_contents_preferences.cc",
    "atom/browser/web_contents_preferences.h",
    "atom/browser/web_contents_zoom_controller.cc",
    "atom/browser/web_contents_zoom_controller.h",
    "atom/browser/web_dialog_helper.cc",
    "atom/browser/web_dialog_helper.h",
    "atom/browser/web_view_guest_delegate.cc",
    "atom/browser/web_view_guest_delegate.h",
    "atom/browser/web_view_manager.cc",
    "atom/browser/web_view_manager.h",
    "atom/browser/window_list.cc",
    "atom/browser/window_list.h",
    "atom/browser/window_list_observer.h",
    "atom/browser/zoom_level_delegate.cc",
    "atom/browser/zoom_level_delegate.h",
    "atom/common/api/api_messages.h",
    "atom/common/api/atom_api_asar.cc",
    "atom/common/api/atom_api_clipboard.cc",
    "atom/common/api/atom_api_clipboard.h",
    "atom/common/api/atom_api_clipboard_mac.mm",
    "atom/common/api/atom_api_command_line.cc",
    "atom/common/api/atom_api_crash_reporter.cc",
    "atom/common/api/atom_api_key_weak_map.h",
    "atom/common/api/atom_api_native_image.cc",
    "atom/common/api/atom_api_native_image.h",
    "atom/common/api/atom_api_native_image_mac.mm",
    "atom/common/api/atom_api_shell.cc",
    "atom/common/api/atom_api_v8_util.cc",
    "atom/common/api/atom_bindings.cc",
    "atom/common/api/atom_bindings.h",
    "atom/common/api/constructor.h",
    "atom/common/api/event_emitter_caller.cc",
    "atom/common/api/event_emitter_caller.h",
    "atom/common/api/features.cc",
    "atom/common/api/locker.cc",
    "atom/common/api/locker.h",
    "atom/common/api/object_life_monitor.cc",
    "atom/common/api/object_life_monitor.h",
    "atom/common/api/remote_callback_freer.cc",
    "atom/common/api/remote_callback_freer.h",
    "atom/common/api/remote_object_freer.cc",
    "atom/common/api/remote_object_freer.h",
    "atom/common/asar/archive.cc",
    "atom/common/asar/archive.h",
    "atom/common/asar/asar_util.cc",
    "atom/common/asar/asar_util.h",
    "atom/common/asar/scoped_temporary_file.cc",
    "atom/common/asar/scoped_temporary_file.h",
    "atom/common/application_info_linux.cc",
    "atom/common/application_info_mac.mm",
    "atom/common/application_info_win.cc",
    "atom/common/application_info.cc",
    "atom/common/application_info.h",
    "atom/common/atom_command_line.cc",
    "atom/common/atom_command_line.h",
    "atom/common/atom_constants.cc",
    "atom/common/atom_constants.h",
    "atom/common/color_util.cc",
    "atom/common/color_util.h",
    "atom/common/common_message_generator.cc",
    "atom/common/common_message_generator.h",
    "atom/common/crash_reporter/crash_reporter.cc",
    "atom/common/crash_reporter/crash_reporter.h",
    "atom/common/crash_reporter/crash_reporter_linux.cc",
    "atom/common/crash_reporter/crash_reporter_linux.h",
    "atom/common/crash_reporter/crash_reporter_mac.h",
    "atom/common/crash_reporter/crash_reporter_mac.mm",
    "atom/common/crash_reporter/crash_reporter_win.cc",
    "atom/common/crash_reporter/crash_reporter_win.h",
    "atom/common/crash_reporter/linux/crash_dump_handler.cc",
    "atom/common/crash_reporter/linux/crash_dump_handler.h",
    "atom/common/crash_reporter/win/crash_service.cc",
    "atom/common/crash_reporter/win/crash_service.h",
    "atom/common/crash_reporter/win/crash_service_main.cc",
    "atom/common/crash_reporter/win/crash_service_main.h",
    "atom/common/draggable_region.cc",
    "atom/common/draggable_region.h",
    "atom/common/heap_snapshot.cc",
    "atom/common/heap_snapshot.h",
    "atom/common/key_weak_map.h",
    "atom/common/keyboard_util.cc",
    "atom/common/keyboard_util.h",
    "atom/common/mouse_util.cc",
    "atom/common/mouse_util.h",
    "atom/common/mac/main_application_bundle.h",
    "atom/common/mac/main_application_bundle.mm",
    "atom/common/native_mate_converters/accelerator_converter.cc",
    "atom/common/native_mate_converters/accelerator_converter.h",
    "atom/common/native_mate_converters/blink_converter.cc",
    "atom/common/native_mate_converters/blink_converter.h",
    "atom/common/native_mate_converters/callback.cc",
    "atom/common/native_mate_converters/callback.h",
    "atom/common/native_mate_converters/content_converter.cc",
    "atom/common/native_mate_converters/content_converter.h",
    "atom/common/native_mate_converters/file_dialog_converter.cc",
    "atom/common/native_mate_converters/file_dialog_converter.h",
    "atom/common/native_mate_converters/file_path_converter.h",
    "atom/common/native_mate_converters/gfx_converter.cc",
    "atom/common/native_mate_converters/gfx_converter.h",
    "atom/common/native_mate_converters/gurl_converter.h",
    "atom/common/native_mate_converters/image_converter.cc",
    "atom/common/native_mate_converters/image_converter.h",
    "atom/common/native_mate_converters/net_converter.cc",
    "atom/common/native_mate_converters/net_converter.h",
    "atom/common/native_mate_converters/network_converter.cc",
    "atom/common/native_mate_converters/network_converter.h",
    "atom/common/native_mate_converters/string16_converter.h",
    "atom/common/native_mate_converters/ui_base_types_converter.h",
    "atom/common/native_mate_converters/v8_value_converter.cc",
    "atom/common/native_mate_converters/v8_value_converter.h",
    "atom/common/native_mate_converters/value_converter.cc",
    "atom/common/native_mate_converters/value_converter.h",
    "atom/common/node_bindings.cc",
    "atom/common/node_bindings.h",
    "atom/common/node_bindings_linux.cc",
    "atom/common/node_bindings_linux.h",
    "atom/common/node_bindings_mac.cc",
    "atom/common/node_bindings_mac.h",
    "atom/common/node_bindings_win.cc",
    "atom/common/node_bindings_win.h",
    "atom/common/node_includes.h",
    "atom/common/options_switches.cc",
    "atom/common/options_switches.h",
    "atom/common/platform_util.h",
    "atom/common/platform_util_linux.cc",
    "atom/common/platform_util_mac.mm",
    "atom/common/platform_util_win.cc",
    "atom/common/promise_util.h",
    "atom/common/promise_util.cc",
    "atom/renderer/api/atom_api_renderer_ipc.cc",
    "atom/renderer/api/atom_api_spell_check_client.cc",
    "atom/renderer/api/atom_api_spell_check_client.h",
    "atom/renderer/api/atom_api_web_frame.cc",
    "atom/renderer/atom_autofill_agent.cc",
    "atom/renderer/atom_autofill_agent.h",
    "atom/renderer/atom_render_frame_observer.cc",
    "atom/renderer/atom_render_frame_observer.h",
    "atom/renderer/atom_render_view_observer.cc",
    "atom/renderer/atom_render_view_observer.h",
    "atom/renderer/atom_renderer_client.cc",
    "atom/renderer/atom_renderer_client.h",
    "atom/renderer/content_settings_observer.cc",
    "atom/renderer/content_settings_observer.h",
    "atom/renderer/atom_sandboxed_renderer_client.cc",
    "atom/renderer/atom_sandboxed_renderer_client.h",
    "atom/renderer/guest_view_container.cc",
    "atom/renderer/guest_view_container.h",
    "atom/renderer/preferences_manager.cc",
    "atom/renderer/preferences_manager.h",
    "atom/renderer/renderer_client_base.cc",
    "atom/renderer/renderer_client_base.h",
    "atom/renderer/web_worker_observer.cc",
    "atom/renderer/web_worker_observer.h",
    "atom/utility/atom_content_utility_client.cc",
    "atom/utility/atom_content_utility_client.h",
    "chromium_src/chrome/browser/process_singleton_posix.cc",
    "chromium_src/chrome/browser/process_singleton_win.cc",
    "chromium_src/chrome/browser/process_singleton.h",
    "chromium_src/chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.cc",
    "chromium_src/chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.h",
  ]

  lib_sources_nss = [
    "chromium_src/chrome/browser/certificate_manager_model.cc",
    "chromium_src/chrome/browser/certificate_manager_model.h",
  ]

  app_sources = [
    "atom/app/atom_main.cc",
    "atom/app/atom_main.h",
  ]

  framework_sources = [
    "atom/app/atom_library_main.h",
    "atom/app/atom_library_main.mm",
  ]

  login_helper_sources = [ "atom/app/atom_login_helper.mm" ]
}
